--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "discord-player": "^6.6.4",
     "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1",
     "fs": "^0.0.1-security"
   }
 }
