--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
   "author": "José MONTEIRO",
   "license": "ISC",
   "dependencies": {
+    "@discord-player/extractor": "^4.4.4",
+    "avconv": "^3.1.0",
     "discord-player": "^6.6.4",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
-    "fs": "^0.0.1-security"
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.2.0",
+    "fs": "^0.0.1-security",
+    "ytdl-core": "^4.11.5"
   }
 }
