--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@discord-player/extractor": "^4.4.4",
+    "@discordjs/opus": "^0.9.0",
+    "@evan/opus": "^1.0.2",
     "avconv": "^3.1.0",
     "discord-player": "^6.6.4",
     "discord.js": "^14.13.0",
@@ -23,7 +25,9 @@
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
+    "mediaplex": "^0.0.8",
     "node-gyp": "^9.4.0",
+    "opusscript": "^0.0.8",
     "ytdl-core": "^4.11.5"
   }
 }
